--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,10 +11,10 @@ buildscript {
         google()
         mavenCentral()
     }
-    dependencies {
-        classpath("com.android.tools.build:gradle")
-        classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+      dependencies {
+        classpath "com.android.tools.build:gradle:8.0.0"  // Specify the version of the Android Gradle Plugin
+        classpath "com.facebook.react:react-native-gradle-plugin"  // Specify the version if needed
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"  // Specify the Kotlin Gradle Plugin version
     }
 }
 
