--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "loginregistercrm",
-  "displayName": "loginregistercrm"
+  "name": "applicationtracking",
+  "displayName": "applicationtracking"
 }
