--- a/package.json
+++ b/package.json
@@ -10,15 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native-stack": "^6.10.1",
     "aws-sdk": "^2.1659.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-calendars": "^1.1306.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-keychain": "^8.2.0",
     "react-native-mail": "^6.1.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-simple-toast": "^3.3.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
